src/main/resources/edu/wpi/teamo/fxml/CSS/MainPage.css
@font-face {
    src: url('../../fonts/Roboto-Regular.ttf');
}

.map-editor-node {
    -fx-fill: rgba(216, 248, 255, 1);
    -fx-stroke: rgba(0, 0, 0, 1);
}

.map-editor-edge {
    -fx-fill: rgba(0, 0, 0, 0.7);
    -fx-stroke: rgba(0, 0, 0, 0.7);
}

.pathfinder-node {
    -fx-fill: rgba(15, 221, 255, 0.7);
    -fx-stroke: rgba(0, 0, 0, 1);
}

.path-same-floor {
    -fx-fill: rgb(145, 243, 255);
    -fx-stroke: rgb(122, 233, 255);
}

.path-diff-floor {
    -fx-fill: rgba(126, 126, 126, 0.7);
    -fx-stroke: rgba(129, 129, 129, 0.7);
}

.path-highlight {
    -fx-fill: rgb(0, 30, 255);
    -fx-stroke: rgb(0, 55, 255);
}

.path-arrow {
    -fx-fill: rgb(0, 30, 255);
    -fx-stroke: rgb(0, 55, 255);
}

.path-start {
    -fx-fill: rgba(0, 0, 0, 1);
    -fx-stroke: rgba(0, 0, 0, 1);
}

.path-end {
    -fx-fill: rgba(255, 255, 255, 1);
    -fx-stroke: rgb(0, 0, 0);
}

.pane {
    -fx-background-color: rgba(255, 255, 255, 0.45);
    -fx-border-color: rgba(255, 255, 255, 0.9);
    -fx-border-width: 0.5;
    -fx-effect: dropshadow(gaussian, rgba(100, 100, 100, 0.3), 10, 0.5, 0.0, 0.0);
}

.thickerPane {
    -fx-background-color: rgba(255, 255, 255, 0.6);
    -fx-border-color: rgba(255, 255, 255, 0.9);
    -fx-border-width: 0.5;
    -fx-effect: dropshadow(gaussian, rgba(100, 100, 100, 0.3), 10, 0.5, 0.0, 0.0);
}

.murkier-pane {
    -fx-background-color: rgba(255, 255, 255, 0.6);
    -fx-border-color: rgba(255, 255, 255, 0.9);
    -fx-border-width: 0.5;
    -fx-effect: dropshadow(gaussian, rgba(100, 100, 100, 0.3), 10, 0.5, 0.0, 0.0);
}

.stupidThickPane {
    -fx-background-color: rgba(219, 219, 219, 1);
    -fx-border-color: rgba(255, 255, 255, 0.9);
    -fx-border-width: 0.5;
    -fx-effect: dropshadow(gaussian, rgba(100, 100, 100, 0.3), 10, 0.5, 0.0, 0.0);
}

.button {
    -fx-background-color: rgb(216, 248, 255);
    -fx-font-size: 12;
    -fx-font-family: "Roboto Regular";
    -fx-font-weight: normal;
    -fx-text-fill: #000000;
    -fx-border-radius: 0;
    -fx-background-radius: 0;
    margin: 15px 15px 15px 15px;
    /*-fx-border-color: #000000;*/
    /*-fx-border-width: 2;*/
}

.inputs {
    -fx-background-color: rgba(255, 255, 255, 0.3);
    -fx-border-color: rgba(255, 255, 255, 0.9);
    -fx-border-width: 0.5;
    -fx-effect: dropshadow(gaussian, rgba(100, 100, 100, 0.3), 10, 0.5, 0.0, 0.0);
}

.button .submit-button {
    -fx-background-color: rgb(62, 234, 105);
}


.text-field {
    /*-fx-background-color: #88C0D0;*/
    -fx-border-color: #777777;
    -fx-border-width: 0.5;
}

.requestDisplayPane {
    -fx-background-color: rgba(255, 255, 255, 0.7);
    -fx-font-size: 9;
}

.filterPane {
    -fx-background-color: rgba(235, 235, 235, 0.7);
}

.requestDisplayWrapper {
    -fx-border-color: rgba(255, 255, 255, 0.9);
    -fx-border-width: 0.5;
    -fx-effect: dropshadow(gaussian, rgba(100, 100, 100, 0.3), 10, 0.5, 0.0, 0.0);
}

.jfx-dialog-overlay-pane > StackPane {
    -fx-background-color: rgba(255, 255, 255, 0.8);
    -fx-border-color: rgba(255, 255, 255, 0.9);
    -fx-border-width: 0.5;
    -fx-effect: dropshadow(gaussian, rgba(100, 100, 100, 0.3), 10, 0.5, 0.0, 0.0);
    -fx-font-family: "Roboto Regular";
    -fx-font-size: 18;
}

.jfx-dialog-layout > .jfx-layout-actions .jfx-button {
    -fx-pref-height: 30;
    -fx-pref-width: 100;
    -fx-padding: 8;
}

.jfx-check-box{
    -jfx-checked-color: #a5efff;
}



.tree-table-view{
    -fx-font: 12px "Roboto Regular";
    -fx-font-size: 12;
    -fx-background-color: rgba(255, 255, 255, 0.7);
    -fx-border-color: rgba(255, 255, 255, 0.7);
}

.tree-table-row-cell {
    -fx-font: 12px "Roboto Regular";
    -fx-background: rgba(255, 255, 255, 0);
    -fx-border-color: rgba(255, 255, 255, 0.7);
}


.jfx-date-picker{
    -jfx-default-color: #a5efff;
}

.jfx-time-picker{
    -jfx-default-color: #a5efff;
}

.date-picker-popup .left-button,
.date-picker-popup .right-button  {
    -fx-background-color: #a5efff;
}

.date-picker-popup .left-button .jfx-svg-glyph,
.date-picker-popup .right-button .jfx-svg-glyph {
    -fx-background-color: #ffffff;
}

.headerText {
    -fx-font-size: 34;
    -fx-font-family: "Roboto Regular";
}

.button-small {
    -fx-pref-height: 30;
    -fx-pref-width: 60;
}

.combo-box-popup .list-view .list-cell {
    -fx-background-color: #f6f6f6;
}

.jfx-combo-box{
    -jfx-focus-color: #000000;
}

.jfx-combo-box .cell:selected {
    -fx-text-fill: #150f0f;
}

.combo-box-popup .list-view .list-cell:hover {
    -fx-text-fill: #150f0f;
    -fx-background-color: #a5efff;
}

.jfx-text-field{
    -jfx-focus-color: #000000;
}

.jfx-password-field{
    -jfx-focus-color: #000000;
}

.help-button {
    -fx-min-height: 50;
    -fx-min-width: 50;
    -fx-border-radius: 25;
    -fx-background-radius: 25;
    -fx-font-size: 20;
    -fx-font-family: Roboto Regular;
}

.scroll-bar:vertical > .track-background, .scroll-bar:horizontal > .track-background {
    -fx-background-color: #F1F1F1;
    -fx-background-insets: 0.0;
}

.scroll-bar:vertical > .thumb, .scroll-bar:horizontal > .thumb {
    -fx-background-color: #BCBCBC;
    -fx-background-insets: 0.0;
    -fx-background-radius: 1.0;
}

/* Up- and Down-Button Padding */
.scroll-bar:vertical > .increment-button, .scroll-bar:vertical > .decrement-button {
    -fx-padding: 5 2 5 2;
}

/* Left- and Right-Button Padding */
.scroll-bar:horizontal > .increment-button, .scroll-bar:horizontal > .decrement-button {
    -fx-padding: 2 5 2 5;
}

.scroll-bar > .increment-button, .scroll-bar > .decrement-button, .scroll-bar:hover > .increment-button, .scroll-bar:hover > .decrement-button {
    -fx-background-color: transparent;
}

.scroll-bar > .increment-button > .increment-arrow, .scroll-bar > .decrement-button > .decrement-arrow {
    -fx-background-color: rgb(150.0, 150.0, 150.0);
}

/* Up Arrow */
.scroll-bar:vertical > .increment-button > .increment-arrow {
    -fx-shape: "M298 426h428l-214 214z";
}

/* Down Arrow */
.scroll-bar:vertical > .decrement-button > .decrement-arrow {
    -fx-shape: "M298 598l214-214 214 214h-428z";
}

/* Right Arrow */
.scroll-bar:horizontal > .increment-button > .increment-arrow {
    -fx-shape: "M0 428l0 -428l214 214l-214 214z";
}

/* Left Arrow */
.scroll-bar:horizontal > .decrement-button > .decrement-arrow {
    -fx-shape: "M214 0l0 428l-214 -214l214 -214z";
}

.jfx-scroll-pane {
    -fx-background-insets: 0;
    -fx-padding: 0;
    -fx-fill: transparent;
    -fx-background:transparent;
    -fx-background-color: transparent;
    -fx-border-color: rgba(255, 255, 255, 0.9);
    -fx-effect: dropshadow(gaussian, rgba(100, 100, 100, 0.3), 10, 0.5, 0.0, 0.0);
}

.jfx-scroll-pane:focused {
    -fx-background-insets: 0;
    -fx-background-color: transparent;
    -fx-fill: transparent;
    -fx-border-color: rgba(255, 255, 255, 0.9);
    -fx-effect: dropshadow(gaussian, rgba(100, 100, 100, 0.3), 10, 0.5, 0.0, 0.0);
}

.label-about {
    -fx-text-fill: #000000;
    -fx-wrap-text: true;
    -fx-font-size: 15;
}

.jfx-scroll-pane .main-header {
    -fx-background-color: rgba(239, 239, 239, 0.9);
    -fx-background: rgba(255, 239, 239, 0.9);
    -fx-fill: transparent;
    -fx-border-color: rgba(255, 255, 255, 0.9);
    -fx-effect: dropshadow(gaussian, rgba(100, 100, 100, 0.3), 10, 0.5, 0.0, 0.0);
}

.jfx-scroll-pane .main-header .label{
    -fx-text-fill: #000000;
    -fx-wrap-text: true;
    -fx-font-size: 50;
}

.jfx-scroll-pane .condensed-header{
    -fx-background-color: rgba(239, 239, 239, 0.9);
    -fx-background: rgba(255, 239, 239, 0.9);
    -fx-fill: transparent;
    -fx-border-color: rgba(255, 255, 255, 0.9);
    -fx-effect: dropshadow(gaussian, rgba(100, 100, 100, 0.3), 10, 0.5, 0.0, 0.0);
}
.scroll-pane{
    -fx-background-color: rgba(255, 255, 255, 0.7);
    -fx-border-color: rgba(255, 255, 255, 0.9);
    -fx-border-width: 0.5;
    -fx-effect: dropshadow(gaussian, rgba(100, 100, 100, 0.3), 10, 0.5, 0.0, 0.0);
}

.pane-button {
    -fx-background-color: rgba(255, 255, 255, 0.45);
    -fx-border-color: rgba(255, 255, 255, 0.9);
    -fx-border-width: 0.5;
    -fx-effect: dropshadow(gaussian, rgba(100, 100, 100, 0.3), 10, 0.5, 0.0, 0.0);
}

